--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>Momentum App</title>
   </head>
   <body>
-    <div id="weather" class="weather_style hidden">
-      <span></span>
-      <span></span>
-    </div>
+    <nav class="nav_bar">
+      <ul class="navbar__menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">MyPage</a></li>
+      </ul>
+      <div id="weather" class="weather_style hidden">
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
     <h2 id="clock" class="clock_style">00:00:00</h2>
     <form class="hidden" id="login-form">
       <input
