--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <nav class="nav_bar">
       <ul class="navbar__menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">MyPage</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="settings.html">MyPage</a></li>
       </ul>
       <div id="weather" class="weather_style hidden">
         <span></span>
