--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Momentum App</title>
+    <title>MyApp</title>
   </head>
   <body>
     <nav class="nav_bar">
@@ -17,6 +17,9 @@
         <span></span>
       </div>
     </nav>
+    <div class="timerBtn">
+      <button id="timer_button" class="button_start" style="color: white; font-family: HElvetica">Start Timer</button>
+    </div>
     <h2 id="clock" class="clock_style">00:00:00</h2>
     <form class="hidden" id="login-form">
       <input
